test2/asm/mutatingwebhook-istio.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod-asm
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istiod-asm
        namespace: istio-system
        path: "/inject"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQVBuVitZcTkvQ001eGtNUTg0bDVwNFV3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1pUVXpPREV3WkdRdFlURmhOaTAwWW1SbUxXRXdZelF0Tm1SaVlXWmpOekkxTXpReApNQjRYRFRFNE1USXhPVEl5TkRRMU1Wb1hEVEl6TVRJeE9ESXpORFExTVZvd0x6RXRNQ3NHQTFVRUF4TWtaVFV6Ck9ERXdaR1F0WVRGaE5pMDBZbVJtTFdFd1l6UXRObVJpWVdaak56STFNelF4TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBM1pJb1FNcktCaTFTTVpLcTN1MHdQZS95RW52dEFGekFxWlRwVyt0agpJeGRiYUNVZ2x [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        istio-env: asm
