test2/asm/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod-asm
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istiod-asm
        namespace: istio-system
        path: "/inject"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQUw2cmRmWlZMY0dKQmhhMkpkMENVT2N3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1ptUTVZbVEyTkRVdE9XSTRZeTAwTlRJekxXSTROMk10TVRaak1XUmhaVEptWkdGbApNQjRYRFRFM01UQXdOakl4TWpFek1sb1hEVEl5TVRBd05USXlNakV6TWxvd0x6RXRNQ3NHQTFVRUF4TWtabVE1ClltUTJORFV0T1dJNFl5MDBOVEl6TFdJNE4yTXRNVFpqTVdSaFpUSm1aR0ZsTUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBb0ZId3R3SVB2aWZkMVQxVSt3MVJERDRvSmNmdkVjNHNYMjEwUXBXSwptWGJsa1h2WlJ [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        istio-env: asm
